* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[v0.21.2]]
== 0.21.2 (TBD)

icon:plus[] Elasticsearch: The base64 encoded binary document data will no longer be stored in the search index.

icon:check[] GraphQl: Fixed a bug that caused an error when multiple queries where executed concurrently.

[[v0.21.1]]
== 0.21.1 (28.05.2018)

icon:plus[] Elasticsearch: It is now possible to configure https://www.elastic.co/guide/en/elasticsearch/reference/current/mapping.html[custom mappings] for binary fields. Currently only the `mimeType` and `file.content` fields can be mapped. An example for this mapping can be found in the https://getmesh.io/docs/beta/elasticsearch.html#_binary_fields[Gentics Mesh search documentation].

[[v0.21.0]]
== 0.21.0 (27.05.2018)

icon:bullhorn[] Binary Search

[quote]
____
This version of Gentics Mesh introduces the __Binary Search support__.

The https://www.elastic.co/guide/en/elasticsearch/plugins/6.2/ingest-attachment.html[Elasticsearch Ingest Attachment Plugin] will be utilized if possible to process text file uploads (PDF, DOC, DOCX).
A detailed description of this feature can be found in our https://getmesh.io/docs/beta/elasticsearch.html#_binarysearch[Elasticsearch Documentation].
____

icon:plus[] Elasticsearch: It is now possible to configure a prefix string within the search options. Multiple Gentics Mesh installations with different prefixes can now utilize the same Elasticsearch server. Created indices and pipelines will automatically be prefixed. Other elements which do not start with the prefix will be ignored.

[[v0.20.0]]
== 0.20.0 (25.05.2018)

icon:bullhorn[] OAuth2 Support

[quote]
____
This version of Gentics Mesh introduces the __OAuth2 authentication support__. A detailed description of this feature can be found in our https://getmesh.io/docs/beta/authentication.html#_oauth2[Authentication Documentation].
____
