@@ -17,6 +17,8 @@ icon:plus[] Elasticsearch: The base64 encoded binary document data will no longe
 
 icon:check[] GraphQl: Fixed a bug that caused an error when multiple queries where executed concurrently.
 
+icon:check[] Core: Increased performance for webroot endpoint
+
 [[v0.21.1]]
 == 0.21.1 (28.05.2018)
 
